@@ -25,8 +25,24 @@ public:
    void UnloadTexture(BaseTexture* memtex);
    void UnloadAll();
 
+   vector<BaseTexture*> GetLoadedTextures() const;
+   SamplerFilter GetFilter(BaseTexture* memtex) const;
+   SamplerAddressMode GetClampU(BaseTexture* memtex) const;
+   SamplerAddressMode GetClampV(BaseTexture* memtex) const;
+   bool IsLinearRGB(BaseTexture* memtex) const;
+   bool IsPreRenderOnly(BaseTexture* memtex) const;
+
 private:
+   struct MapEntry
+   {
+      Sampler* sampler;
+      std::string name;
+      SamplerFilter filter;
+      SamplerAddressMode clampU, clampV;
+      bool forceLinearRGB;
+      bool preRenderOnly;
+   };
    RenderDevice& m_rd;
-   robin_hood::unordered_map<BaseTexture*, Sampler*> m_map;
-   typedef robin_hood::unordered_map<BaseTexture*, Sampler*>::iterator Iter;
+   robin_hood::unordered_map<BaseTexture*, MapEntry> m_map;
+   typedef robin_hood::unordered_map<BaseTexture*, MapEntry>::iterator Iter;
 };
